# agentic_cockpit

./: .env.local.example  .gitignore  CLAUDE.md  COMPLETE-DELIVERY-CHECKLIST.md  INDEX.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  (+1 more)
gateway/: pyproject.toml
gateway/src/: __init__.py
gateway/src/gateway/: __init__.py  audit.py  audit_bundle.py  auth.py  builder_fsm.py  citation_gate.py  dependencies.py  eval_runner.py  events.py  health.py  hitl.py  hmac_utils.py  logging_config.py  main.py  otel.py  posthog_flags.py  redact.py  runs.py  security_lint.py  settings.py  tenant.py
gateway/src/gateway/clients/: __init__.py  langflow_client.py  policy.py
gateway/src/gateway/hermes/: __init__.py  adaptive_questions.py  agent_setup_runner.py  concern_tracker.py  conversation_engine.py  diff_engine.py  elevenlabs_orchestrator.py  module_composer.py  railway_orchestrator.py  ship_runner.py
gateway/src/gateway/routers/: __init__.py  audit_router.py  auth_router.py  builder_router.py  callbacks.py  chat_router.py  demo_router.py  hitl_router.py  kpis_router.py  ops_router.py  pilots_router.py  runs_router.py
gateway/src/gateway/schemas/: __init__.py  runs.py
gateway/tests/: __init__.py  conftest.py  test_adaptive_questions.py  test_audit_bundle.py  test_builder.py  test_concern_tracker.py  test_conversation_engine.py  test_diff_engine.py  test_eval.py  test_health_deps.py  test_migration_0014_pilots.py  test_migration_0015_pilot_modules.py  test_migration_0016_chat_thread.py  test_migration_0017_pilot_artifacts.py  test_migration_0018_artifact_proposals.py  test_migration_0019_pilot_concerns.py  test_redact.py  test_runs.py  test_sprint1.py  test_webhook_hmac.py
(+325 files in other folders)
